[gd_scene load_steps=25 format=3 uid="uid://bdntcr5tudi1b"]

[ext_resource type="Script" path="res://Scripts/npc.gd" id="1_kinge"]
[ext_resource type="Texture2D" uid="uid://c2ahqyqftdy7l" path="res://kenney_roguelike-rpg-pack/Spritesheet/roguelikeSheet_transparent.png" id="2_ebpt7"]
[ext_resource type="Script" path="res://Scripts/States/Npc/npc_following.gd" id="2_howq1"]
[ext_resource type="Script" path="res://Scripts/States/state_machine.gd" id="2_sw6te"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://sg776dpvlovm" path="res://Animations/player_animation_node_state_machine.tres" id="2_xvmxr"]
[ext_resource type="AnimationLibrary" uid="uid://cfhhu5dvmd7dh" path="res://CharacterAnimations.res" id="3_f0j1w"]
[ext_resource type="Script" path="res://Scripts/States/Npc/npc_idle.gd" id="3_waukb"]
[ext_resource type="PackedScene" uid="uid://y4d1uca33vw0" path="res://Scenes/Components/health_component.tscn" id="3_wo31h"]
[ext_resource type="PackedScene" uid="uid://doratto4po304" path="res://Scenes/Components/hurtbox_component.tscn" id="4_6t8yg"]
[ext_resource type="PackedScene" uid="uid://b3s2y63nra24b" path="res://Scenes/sword.tscn" id="4_x3qln"]
[ext_resource type="PackedScene" uid="uid://dxcrb47g2ejqf" path="res://Scenes/actionable.tscn" id="5_jo4wx"]
[ext_resource type="PackedScene" uid="uid://pwse5ov065ph" path="res://Scenes/shield.tscn" id="5_r2ml8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wsuc0"]
atlas = ExtResource("2_ebpt7")
region = Rect2(884, 459, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_krhfj"]
atlas = ExtResource("2_ebpt7")
region = Rect2(884, 510, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkrkf"]
atlas = ExtResource("2_ebpt7")
region = Rect2(901, 459, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0ynp"]
atlas = ExtResource("2_ebpt7")
region = Rect2(901, 510, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ava5m"]
atlas = ExtResource("2_ebpt7")
region = Rect2(884, 459, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvff1"]
atlas = ExtResource("2_ebpt7")
region = Rect2(901, 459, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvhqn"]
atlas = ExtResource("2_ebpt7")
region = Rect2(918, 459, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f6eg"]
atlas = ExtResource("2_ebpt7")
region = Rect2(935, 459, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5qvlo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsuc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krhfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkrkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0ynp")
}],
"loop": true,
"name": &"hit",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ava5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvff1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvhqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f6eg")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cslfr"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jdjs5"]
radius = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fd4sv"]
radius = 12.0

[node name="Npc" type="CharacterBody2D"]
z_index = 1
collision_layer = 17
script = ExtResource("1_kinge")

[node name="CharacterAnimations" type="Node2D" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="CharacterAnimations"]
active = false
root_node = NodePath("../..")
tree_root = ExtResource("2_xvmxr")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/block = false
parameters/conditions/hit = false
parameters/conditions/idle = true
parameters/conditions/moving = false
parameters/conditions/slash = false
parameters/Block/blend_position = Vector2(-0.109767, 0.100917)
parameters/Hit/blend_position = Vector2(0, 0)
parameters/Idle/blend_position = Vector2(1, 0)
parameters/Slash/blend_position = Vector2(-0.597234, -0.0336392)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterAnimations"]
root_node = NodePath("../..")
libraries = {
&"CharacterAnimations": ExtResource("3_f0j1w")
}

[node name="Direction" type="Node2D" parent="CharacterAnimations"]

[node name="Sword" parent="CharacterAnimations/Direction" instance=ExtResource("4_x3qln")]

[node name="Shield" parent="CharacterAnimations/Direction" instance=ExtResource("5_r2ml8")]
position = Vector2(0, 8)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_sw6te")
initial_state = NodePath("NpcIdle")

[node name="NpcIdle" type="Node" parent="StateMachine"]
script = ExtResource("3_waukb")

[node name="NpcFollowing" type="Node" parent="StateMachine"]
script = ExtResource("2_howq1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5qvlo")
animation = &"hit"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
position_smoothing_enabled = true
position_smoothing_speed = 20.0

[node name="HealthComponent" parent="." instance=ExtResource("3_wo31h")]
health = 3
immunityLength = 1.0

[node name="PhysicsCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cslfr")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health") instance=ExtResource("4_6t8yg")]
collision_layer = 16
collision_mask = 6
health = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_jdjs5")

[node name="Actionable" parent="." instance=ExtResource("5_jo4wx")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actionable"]
shape = SubResource("CircleShape2D_fd4sv")

[node name="NameLabel" type="Label" parent="."]
z_index = 5
offset_left = -30.0
offset_top = -14.0
offset_right = 170.0
offset_bottom = 11.0
scale = Vector2(0.3, 0.3)
text = "name"
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 1
language = "en"
